@@ -1,16 +1,20 @@
 package org.nanopub;
 
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.text.DateFormat;
-import java.util.Calendar;
-
 import jakarta.xml.bind.DatatypeConverter;
-
 import org.eclipse.rdf4j.model.IRI;
 import org.eclipse.rdf4j.model.Literal;
 import org.eclipse.rdf4j.model.Statement;
 import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
+import org.eclipse.rdf4j.model.vocabulary.DCTERMS;
+import org.eclipse.rdf4j.model.vocabulary.PROV;
+import org.nanopub.vocabulary.PAV;
+
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.text.DateFormat;
+import java.util.Calendar;
 
 /**
  * A simple timestamp pattern.
@@ -18,6 +22,8 @@ import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
 public class SimpleTimestampPattern implements NanopubPattern {
 
     /**
+     * {@inheritDoc}
+     * <p>
      * Returns the name of the pattern
      */
     @Override
@@ -25,16 +31,25 @@ public class SimpleTimestampPattern implements NanopubPattern {
         return "Basic timestamp information";
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public boolean appliesTo(Nanopub nanopub) {
         return true;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public boolean isCorrectlyUsedBy(Nanopub nanopub) {
         return getCreationTime(nanopub) != null;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public String getDescriptionFor(Nanopub nanopub) {
         Calendar timestamp = getCreationTime(nanopub);
@@ -45,9 +60,12 @@ public class SimpleTimestampPattern implements NanopubPattern {
         }
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public URL getPatternInfoUrl() throws MalformedURLException {
-        return new URL("https://github.com/Nanopublication/nanopub-java/blob/master/src/main/java/org/nanopub/SimpleTimestampPattern.java");
+    public URL getPatternInfoUrl() throws MalformedURLException, URISyntaxException {
+        return new URI("https://github.com/Nanopublication/nanopub-java/blob/master/src/main/java/org/nanopub/SimpleTimestampPattern.java").toURL();
     }
 
     /**
@@ -70,11 +88,10 @@ public class SimpleTimestampPattern implements NanopubPattern {
         return DatatypeConverter.parseDateTime(s);
     }
 
+    /**
+     * Constant <code>XSD_DATETIME</code>
+     */
     public static final IRI XSD_DATETIME = SimpleValueFactory.getInstance().createIRI("http://www.w3.org/2001/XMLSchema#dateTime");
-
-    public static final IRI DCT_CREATED = SimpleValueFactory.getInstance().createIRI("http://purl.org/dc/terms/created");
-    public static final IRI PROV_GENERATEDATTIME = SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/prov#generatedAtTime");
-    public static final IRI PAV_CREATEDON = SimpleValueFactory.getInstance().createIRI("http://purl.org/pav/createdOn");
 
     /**
      * Checks if the given IRI is a property that indicates the creation time of a nanopublication.
@@ -83,7 +100,7 @@ public class SimpleTimestampPattern implements NanopubPattern {
      * @return true if the IRI is a creation time property, false otherwise
      */
     public static boolean isCreationTimeProperty(IRI uri) {
-        return uri.equals(DCT_CREATED) || uri.equals(PROV_GENERATEDATTIME) || uri.equals(PAV_CREATEDON);
+        return uri.equals(DCTERMS.CREATED) || uri.equals(PROV.GENERATED_AT_TIME) || uri.equals(PAV.CREATED_ON);
     }
 
 }
