@@ -5,6 +5,8 @@ import org.nanopub.Nanopub;
 import org.nanopub.NanopubPattern;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -18,16 +20,25 @@ public class NanopubIndexPattern implements NanopubPattern {
     public NanopubIndexPattern() {
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public String getName() {
         return "Nanopublication index";
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public boolean appliesTo(Nanopub nanopub) {
         return IndexUtils.isIndex(nanopub);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public boolean isCorrectlyUsedBy(Nanopub nanopub) {
         try {
@@ -38,6 +49,9 @@ public class NanopubIndexPattern implements NanopubPattern {
         return true;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public String getDescriptionFor(Nanopub nanopub) {
         try {
@@ -48,9 +62,12 @@ public class NanopubIndexPattern implements NanopubPattern {
         return "This is a valid nanopublication index.";
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public URL getPatternInfoUrl() throws MalformedURLException {
-        return new URL("http://arxiv.org/abs/1411.2749");
+    public URL getPatternInfoUrl() throws MalformedURLException, URISyntaxException {
+        return new URI("http://arxiv.org/abs/1411.2749").toURL();
     }
 
 }
