@@ -6,33 +6,34 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class RunQueryTest {
 
     @Test
-    void noParametersTest () {
+    void noParametersTest() {
         RunQuery rq = new RunQuery();
-        assertThat(rq.prepareParamsMap(null)).isEmpty();
+        assertTrue(rq.prepareParamsMap(null).isEmpty());
     }
 
     @Test
-    void oneParameterTest () {
+    void oneParameterTest() {
         RunQuery rq = new RunQuery();
-        List<String> param = Arrays.asList("a=1");
+        List<String> param = List.of("a=1");
         Map<String, String> res = rq.prepareParamsMap(param);
-        assertThat(res.size()).isEqualTo(1);
-        assertThat(res.get("a")).isEqualTo("1");
+        assertEquals(res.size(), 1);
+        assertEquals(res.get("a"), "1");
     }
 
     @Test
-    void twoParametersTest () {
+    void twoParametersTest() {
         RunQuery rq = new RunQuery();
         List<String> param = Arrays.asList("a=1", "b=2");
         Map<String, String> res = rq.prepareParamsMap(param);
-        assertThat(res.size()).isEqualTo(2);
-        assertThat(res.get("a")).isEqualTo("1");
-        assertThat(res.get("b")).isEqualTo("2");
+        assertEquals(res.size(), 2);
+        assertEquals(res.get("a"), "1");
+        assertEquals(res.get("b"), "2");
     }
 
 }
